mra/MRAPanel: Fix Java9+ deprecation for new Double.